Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,77 +84,17 @@
        "      <td>5/1/81</td>\n",
        "      <td>15.8</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6/1/81</td>\n",
-       "      <td>15.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7/1/81</td>\n",
-       "      <td>15.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8/1/81</td>\n",
-       "      <td>17.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9/1/81</td>\n",
-       "      <td>21.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10/1/81</td>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11/1/81</td>\n",
-       "      <td>16.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12/1/81</td>\n",
-       "      <td>13.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13/1/81</td>\n",
-       "      <td>16.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14/1/81</td>\n",
-       "      <td>21.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15/1/81</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Date  Daily_min\n",
-       "0    1/1/81       20.7\n",
-       "1    2/1/81       17.9\n",
-       "2    3/1/81       18.8\n",
-       "3    4/1/81       14.6\n",
-       "4    5/1/81       15.8\n",
-       "5    6/1/81       15.8\n",
-       "6    7/1/81       15.8\n",
-       "7    8/1/81       17.4\n",
-       "8    9/1/81       21.8\n",
-       "9   10/1/81       20.0\n",
-       "10  11/1/81       16.2\n",
-       "11  12/1/81       13.3\n",
-       "12  13/1/81       16.7\n",
-       "13  14/1/81       21.5\n",
-       "14  15/1/81       25.0"
+       "     Date  Daily_min\n",
+       "0  1/1/81       20.7\n",
+       "1  2/1/81       17.9\n",
+       "2  3/1/81       18.8\n",
+       "3  4/1/81       14.6\n",
+       "4  5/1/81       15.8"
       ]
      },
      "execution_count": 1,
@@ -165,7 +105,7 @@
    "source": [
     "import pandas as pd\n",
     "temp_data = pd.read_csv(\"min_temp.csv\")\n",
-    "temp_data.head(15)"
+    "temp_data.head()"
    ]
   },
   {
@@ -211,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,46 +268,6 @@
        "      <th>1981-01-05</th>\n",
        "      <td>15.8</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-06</th>\n",
-       "      <td>15.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-07</th>\n",
-       "      <td>15.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-08</th>\n",
-       "      <td>17.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-09</th>\n",
-       "      <td>21.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-10</th>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-11</th>\n",
-       "      <td>16.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-12</th>\n",
-       "      <td>13.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-13</th>\n",
-       "      <td>16.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-14</th>\n",
-       "      <td>21.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-15</th>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -379,26 +279,16 @@
        "1981-01-02       17.9\n",
        "1981-01-03       18.8\n",
        "1981-01-04       14.6\n",
-       "1981-01-05       15.8\n",
-       "1981-01-06       15.8\n",
-       "1981-01-07       15.8\n",
-       "1981-01-08       17.4\n",
-       "1981-01-09       21.8\n",
-       "1981-01-10       20.0\n",
-       "1981-01-11       16.2\n",
-       "1981-01-12       13.3\n",
-       "1981-01-13       16.7\n",
-       "1981-01-14       21.5\n",
-       "1981-01-15       25.0"
+       "1981-01-05       15.8"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp_data.head(15)"
+    "temp_data.head()"
    ]
   },
   {
@@ -416,17 +306,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-ab02e0a0d8fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtemp_monthly\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'MS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmonth_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_monthly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(self, rule, how, axis, fill_method, closed, label, convention, kind, loffset, limit, base, on, level)\u001b[0m\n\u001b[1;32m   7108\u001b[0m                      \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloffset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloffset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7109\u001b[0m                      \u001b[0mconvention\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvention\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7110\u001b[0;31m                      base=base, key=on, level=level)\n\u001b[0m\u001b[1;32m   7111\u001b[0m         return _maybe_process_deprecations(r,\n\u001b[1;32m   7112\u001b[0m                                            \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(obj, kind, **kwds)\u001b[0m\n\u001b[1;32m   1146\u001b[0m     \u001b[0;34m\"\"\" create a TimeGrouper and return our resampler \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1147\u001b[0m     \u001b[0mtg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTimeGrouper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1148\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_resampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1149\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36m_get_resampler\u001b[0;34m(self, obj, kind)\u001b[0m\n\u001b[1;32m   1274\u001b[0m         raise TypeError(\"Only valid with DatetimeIndex, \"\n\u001b[1;32m   1275\u001b[0m                         \u001b[0;34m\"TimedeltaIndex or PeriodIndex, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1276\u001b[0;31m                         \"but got an instance of %r\" % type(ax).__name__)\n\u001b[0m\u001b[1;32m   1277\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1278\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_get_grouper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'"
+     ]
+    }
+   ],
    "source": [
-    "temp_monthly= temp_data.resample('MS')\n",
+    "temp_monthly = temp_data.resample('MS')\n",
     "month_mean = temp_monthly.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -478,46 +383,6 @@
        "      <th>1981-05-01</th>\n",
        "      <td>9.490323</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-06-01</th>\n",
-       "      <td>7.306667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-07-01</th>\n",
-       "      <td>7.577419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-08-01</th>\n",
-       "      <td>7.238710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-09-01</th>\n",
-       "      <td>10.143333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-10-01</th>\n",
-       "      <td>10.087097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-11-01</th>\n",
-       "      <td>11.890000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-12-01</th>\n",
-       "      <td>13.680645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1982-01-01</th>\n",
-       "      <td>16.567742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1982-02-01</th>\n",
-       "      <td>15.921429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1982-03-01</th>\n",
-       "      <td>14.935484</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -529,26 +394,16 @@
        "1981-02-01  17.678571\n",
        "1981-03-01  13.500000\n",
        "1981-04-01  12.356667\n",
-       "1981-05-01   9.490323\n",
-       "1981-06-01   7.306667\n",
-       "1981-07-01   7.577419\n",
-       "1981-08-01   7.238710\n",
-       "1981-09-01  10.143333\n",
-       "1981-10-01  10.087097\n",
-       "1981-11-01  11.890000\n",
-       "1981-12-01  13.680645\n",
-       "1982-01-01  16.567742\n",
-       "1982-02-01  15.921429\n",
-       "1982-03-01  14.935484"
+       "1981-05-01   9.490323"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "month_mean.head(15)"
+    "month_mean.head()"
    ]
   },
   {
@@ -562,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +483,7 @@
        "1981-01-03 00:00:00       18.8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +561,7 @@
        "1981-01-03 00:00:00       18.8"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +633,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,17 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +738,7 @@
        "1961-05-01           0.042"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
