--- a/index.ipynb
+++ b/index.ipynb
@@ -864,11 +864,12 @@
     "nyse_annual = pd.DataFrame()\n",
     "\n",
     "for yr, group in year_groups:\n",
-    "    nyse_annual[yr.year] = group.values.ravel()\n",
+    "    print(year, gro)\n",
+    "#     nyse_annual[yr.year] = group.values.ravel()\n",
     "    \n",
-    "# Plot the yearly groups as subplots\n",
-    "nyse_annual.plot(figsize = (13,8), subplots=True, legend=True)\n",
-    "plt.show()"
+    "# # Plot the yearly groups as subplots\n",
+    "# nyse_annual.plot(figsize = (13,8), subplots=True, legend=True)\n",
+    "# plt.show()"
    ]
   },
   {
