Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -845,14 +845,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            monthly_return\n",
+      "1961-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1961-01-01           0.082\n",
       "1961-02-01           0.059\n",
@@ -866,7 +866,7 @@
       "1961-10-01           0.021\n",
       "1961-11-01           0.046\n",
       "1961-12-01          -0.004\n",
-      "            monthly_return\n",
+      "1962-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1962-01-01          -0.008\n",
       "1962-02-01           0.016\n",
@@ -880,7 +880,7 @@
       "1962-10-01          -0.022\n",
       "1962-11-01           0.071\n",
       "1962-12-01          -0.009\n",
-      "            monthly_return\n",
+      "1963-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1963-01-01           0.068\n",
       "1963-02-01          -0.015\n",
@@ -894,7 +894,7 @@
       "1963-10-01           0.016\n",
       "1963-11-01          -0.007\n",
       "1963-12-01           0.008\n",
-      "            monthly_return\n",
+      "1964-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1964-01-01           0.020\n",
       "1964-02-01           0.027\n",
@@ -908,7 +908,7 @@
       "1964-10-01           0.017\n",
       "1964-11-01           0.001\n",
       "1964-12-01          -0.007\n",
-      "            monthly_return\n",
+      "1965-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1965-01-01           0.059\n",
       "1965-02-01           0.028\n",
@@ -922,7 +922,7 @@
       "1965-10-01           0.047\n",
       "1965-11-01           0.030\n",
       "1965-12-01           0.033\n",
-      "            monthly_return\n",
+      "1966-12-31 00:00:00             monthly_return\n",
       "Month                     \n",
       "1966-01-01           0.044\n",
       "1966-02-01           0.011\n",
@@ -944,7 +944,7 @@
     "nyse_annual = pd.DataFrame()\n",
     "\n",
     "for yr, group in year_groups:\n",
-    "    print(group)\n",
+    "    print(yr, group)\n",
     "#     nyse_annual[yr.year] = group.values.ravel()\n",
     "    \n",
     "# # Plot the yearly groups as subplots\n",
