--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -840,7 +840,7 @@
    "outputs": [],
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
-    "year_groups = nyse.groupby(pd.Grouper(freq =''))"
+    "year_groups = nyse.groupby(pd.Grouper(freq ='A'))"
    ]
   },
   {
